--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "File Input"
   ],
   "author": "Captivation Software",
-  "contributors": [{
+  "contributors": [],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/captivationsoftware/react-file-input/issues"
